--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.11.13",
+    "jszip": "^3.10.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
